rar2fs ChangeLog file.

2015-11-29  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Fix wrong path being used in utimens 

2015-08-28  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Released 1.21.0

        * Completely remove use of pthread_exit()

2015-08-02  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Built and tested against UnRAR source 5.30 beta 1 (5.3.1)
          This should resolve issue [rar2fs #40]

2015-01-15  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Fixed a crash when using the --exclude option.

2014-09-19  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #37]

          Fixed a potential memory leak when compiling against 
          libunrar versions prior to 4.2.0.

        * Fixed a potential memory leak in the collect_files() 
          function. This function is only used when mounting
          single RAR archives which means it is rather harmless.

        * Simplified code in function dir_entry_add_hash().

2014-07-16  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Changed implementation of utimens

        * [rar2fs #35]

        Fixed a problem with RAR5 stats that were incorrectly
        inherited for file reference links.

2014-03-19  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Released 1.20.0

        * Turned off support for block special device mounts other
          than for Linux platforms. It does not make much sense trying  
          to support it any where else due to possible read alignment
          restrictions.

2014-03-18  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Built and tested against UnRAR source 5.10 beta 1 (5.1.1)

2014-03-17  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #34]

        Fixed a problem with old style archives split into more
        than 101 files.

2014-03-16  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Now returning "No such file or directory" instead of