@@ -66,7 +66,7 @@ struct dir_elem {
                         unsigned int fake_iso:1;
                         unsigned int mmap:2;
                         unsigned int force_dir:1;
-                        unsigned int vno_in_header:1;
+                        unsigned int vno_check_header_sz:1;
                         unsigned int encrypted:1;
                         unsigned int :20;
                         unsigned int direct_io:1;
@@ -78,7 +78,7 @@ struct dir_elem {
                         unsigned int direct_io:1;
                         unsigned int :20;
                         unsigned int encrypted:1;
-                        unsigned int vno_in_header:1;
+                        unsigned int vno_chk_header_sz:1;
                         unsigned int force_dir:1;
                         unsigned int mmap:2;
                         unsigned int fake_iso:1;
